--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
-    "name": "anime-storage",
-    "version": "0.0.1",
-    "description": "Sample app based on React and Flux with server rendering",
-    "author": "Alexander Ivantsov <alexivantsov@ya.ru> (http://aivantsov.com)",
-    "scripts": {
-        "start": "node server/index.js",
-        "build": "./node_modules/.bin/webpack --stats --progress --config"
-    },
-    "license": "MIT",
-    "keywords": [
-        "javascript",
-        "react",
-        "flux",
-        "webpack",
-        "app",
-        "sample",
-        "server rendering"
-    ],
-    "devDependencies": {
-        "autoprefixer-loader": "^1.2.0",
-        "babel-core": "^5.2.5",
-        "babel-loader": "^5.0.0",
-        "css-loader": "^0.12.0",
-        "extract-text-webpack-plugin": "^0.7.0",
-        "less": "^2.5.0",
-        "less-loader": "^2.2.0",
-        "react-hot-loader": "^1.2.5",
-        "style-loader": "^0.12.1",
-        "webpack": "^1.8.11",
-        "webpack-dev-server": "^1.8.2"
-    },
-    "dependencies": {
-        "babel": "^5.2.6",
-        "express": "^4.12.3",
-        "q": "^1.3.0",
-        "react": "^0.13.2",
-        "react-router": "^0.13.3",
-        "request": "^2.55.0"
-    }
+  "name": "anime-storage",
+  "version": "0.0.1",
+  "description": "Sample app based on React and Flux with server rendering",
+  "author": "Alexander Ivantsov <alexivantsov@ya.ru> (http://aivantsov.com)",
+  "scripts": {
+    "start": "node server/index.js",
+    "build": "./node_modules/.bin/webpack --stats --progress --config"
+  },
+  "license": "MIT",
+  "keywords": [
+    "javascript",
+    "react",
+    "flux",
+    "webpack",
+    "app",
+    "sample",
+    "server rendering"
+  ],
+  "devDependencies": {
+    "autoprefixer-loader": "^1.2.0",
+    "babel-core": "^5.2.5",
+    "babel-loader": "^5.0.0",
+    "css-loader": "^0.12.0",
+    "extract-text-webpack-plugin": "^0.7.0",
+    "less": "^2.5.0",
+    "less-loader": "^2.2.0",
+    "react-hot-loader": "^1.2.5",
+    "style-loader": "^0.12.1",
+    "webpack": "^1.8.11",
+    "webpack-dev-server": "^1.8.2"
+  },
+  "dependencies": {
+    "babel": "^5.2.6",
+    "express": "^4.12.3",
+    "parse": "^1.4.2",
+    "q": "^1.3.0",
+    "react": "^0.13.2",
+    "react-document-title": "^1.0.2",
+    "react-router": "^0.13.3",
+    "request": "^2.55.0"
+  }
 }
