--- a/package.json
+++ b/package.json
@@ -19,23 +19,23 @@
   ],
   "devDependencies": {
     "autoprefixer-loader": "^1.2.0",
-    "babel-core": "^5.2.5",
+    "babel-core": "^5.2.17",
     "babel-loader": "^5.0.0",
     "css-loader": "^0.12.0",
-    "extract-text-webpack-plugin": "^0.7.0",
+    "extract-text-webpack-plugin": "^0.7.1",
     "less": "^2.5.0",
     "less-loader": "^2.2.0",
-    "react-hot-loader": "^1.2.5",
-    "style-loader": "^0.12.1",
+    "react-hot-loader": "^1.2.7",
+    "style-loader": "^0.12.2",
     "webpack": "^1.8.11",
-    "webpack-dev-server": "^1.8.2"
+    "webpack-dev-server": "^1.8.2",
+    "babel": "^5.2.17"
   },
   "dependencies": {
-    "babel": "^5.2.6",
     "express": "^4.12.3",
     "parse": "^1.4.2",
     "q": "^1.3.0",
-    "react": "^0.13.2",
+    "react": "^0.13.3",
     "react-document-title": "^1.0.2",
     "react-router": "^0.13.3",
     "request": "^2.55.0"
