--- a/package.json
+++ b/package.json
@@ -19,25 +19,33 @@
   ],
   "devDependencies": {
     "autoprefixer-loader": "^1.2.0",
-    "babel-core": "^5.2.17",
-    "babel-loader": "^5.0.0",
-    "css-loader": "^0.12.0",
-    "extract-text-webpack-plugin": "^0.7.1",
-    "less": "^2.5.0",
+    "babel-core": "^5.4.7",
+    "babel-loader": "^5.1.3",
+    "css-loader": "^0.13.1",
+    "extract-text-webpack-plugin": "^0.8.0",
+    "less": "^2.5.1",
     "less-loader": "^2.2.0",
     "react-hot-loader": "^1.2.7",
     "style-loader": "^0.12.2",
-    "webpack": "^1.8.11",
-    "webpack-dev-server": "^1.8.2",
-    "babel": "^5.2.17"
+    "webpack": "^1.9.8",
+    "webpack-dev-server": "^1.9.0",
+    "babel": "^5.4.7"
   },
   "dependencies": {
-    "express": "^4.12.3",
-    "parse": "^1.4.2",
-    "q": "^1.3.0",
+    "body-parser": "^1.12.4",
+    "cookie-parser": "^1.3.5",
+    "express": "^4.12.4",
+    "express-session": "^1.11.2",
+    "fluxxor": "^1.5.4",
+    "mongoose": "^4.0.3",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^1.0.0",
+    "q": "^1.4.1",
     "react": "^0.13.3",
     "react-document-title": "^1.0.2",
     "react-router": "^0.13.3",
-    "request": "^2.55.0"
+    "request": "^2.55.0",
+    "whatwg-fetch": "^0.8.2"
   }
 }
