--- a/package.json
+++ b/package.json
@@ -18,16 +18,16 @@
     "server rendering"
   ],
   "devDependencies": {
-    "autoprefixer-loader": "^1.2.0",
+    "autoprefixer-loader": "^2.0.0",
     "babel-core": "^5.4.7",
     "babel-loader": "^5.1.3",
-    "css-loader": "^0.13.1",
-    "extract-text-webpack-plugin": "^0.8.0",
+    "css-loader": "^0.14.4",
+    "extract-text-webpack-plugin": "^0.8.1",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
     "react-hot-loader": "^1.2.7",
-    "style-loader": "^0.12.2",
-    "webpack": "^1.9.8",
+    "style-loader": "^0.12.3",
+    "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0",
     "babel": "^5.4.7"
   },
@@ -37,15 +37,13 @@
     "express": "^4.12.4",
     "express-session": "^1.11.2",
     "fluxxor": "^1.5.4",
-    "mongoose": "^4.0.3",
+    "isomorphic-fetch": "^2.1.0",
+    "mongoose": "^4.0.4",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.0",
-    "q": "^1.4.1",
     "react": "^0.13.3",
     "react-document-title": "^1.0.2",
-    "react-router": "^0.13.3",
-    "request": "^2.55.0",
-    "whatwg-fetch": "^0.8.2"
+    "react-router": "^0.13.3"
   }
 }
